--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <!-- JSON-LD for Casinos CollectionPage with Featured Products -->
+    <!-- JSON-LD for Casinos CollectionPage with Featured Products and Updated Logos -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -124,36 +124,48 @@
                 {
                   "@type": "ListItem",
                   "position": 7,
-                  "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
-                  "name": "DuelBits"
+                  "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/",
+                  "name": "7Bit-Casino"
                 },
                 {
                   "@type": "ListItem",
                   "position": 8,
-                  "url": "https://www.all4wins.com/Reviews-page/Vave/",
-                  "name": "Vave"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 9,
-                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
-                  "name": "CloudBet"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 10,
                   "url": "https://www.all4wins.com/Reviews-page/Rabona/",
                   "name": "Rabona"
                 },
                 {
                   "@type": "ListItem",
-                  "position": 11,
+                  "position": 9,
+                  "url": "https://www.all4wins.com/Reviews-page/Vave/",
+                  "name": "Vave"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 10,
                   "url": "https://www.all4wins.com/Reviews-page/Wazamba/",
                   "name": "Wazamba"
                 },
                 {
                   "@type": "ListItem",
+                  "position": 11,
+                  "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
+                  "name": "DuelBits"
+                },
+                {
+                  "@type": "ListItem",
                   "position": 12,
+                  "url": "https://www.all4wins.com/Reviews-page/Katsubet/",
+                  "name": "Katsubet"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 13,
+                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
+                  "name": "CloudBet"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 14,
                   "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
                   "name": "TrustDice"
                 }
@@ -167,7 +179,7 @@
           {
             "@type": "Product",
             "name": "Roobet",
-            "image": "https://www.all4wins.com/img/roobet-logo.webp",
+            "image": "https://www.all4wins.com/img/Roobet.webp",
             "description": "Best Rewards System, UFC Brand Ambassadors, Parlay Power Play – $40K in Prizes",
             "offers": {
               "@type": "Offer",
@@ -180,7 +192,7 @@
           {
             "@type": "Product",
             "name": "BetFury",
-            "image": "https://www.all4wins.com/img/betfury-logo.webp",
+            "image": "https://www.all4wins.com/img/BetFury-logo.webp",
             "description": "Crypto-Friendly, Comprehensive Stats, Cashback & rakeback up to 50%",
             "offers": {
               "@type": "Offer",
@@ -193,7 +205,7 @@
           {
             "@type": "Product",
             "name": "Wild.io",
-            "image": "https://www.all4wins.com/img/wildio-logo.webp",
+            "image": "https://www.all4wins.com/img/wild-logo.webp",
             "description": "Best Rewards System, High Betting Limits, First deposit 100% bonus up to $200 in free bets",
             "offers": {
               "@type": "Offer",
@@ -202,11 +214,154 @@
               "price": "0",
               "availability": "https://schema.org/InStock"
             }
+          },
+          {
+            "@type": "Product",
+            "name": "Thunderpick",
+            "image": "https://www.all4wins.com/img/thunder-prick-logo.webp",
+            "description": "Top Odds Guaranteed, Wide Sports Coverage, 100% up to 600€",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "GG.Bet",
+            "image": "https://www.all4wins.com/img/GG.bet-logo.webp",
+            "description": "Wide Sports Coverage, High Betting Limits, Welcome Bonus up to 1000€ +250€ Freebets",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "BC.GAME",
+            "image": "https://www.all4wins.com/img/BC-Game.webp",
+            "description": "Top Odds Guaranteed, Seasonal Promotions, Welcome bonuses up to 100% + 20 FB",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/BC.Games/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "7Bit-Casino",
+            "image": "https://www.all4wins.com/img/7bit-logo.webp",
+            "description": "Detailed info not provided",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Rabona",
+            "image": "https://www.all4wins.com/img/rabonaLogo.webp",
+            "description": "Personalized Promotions, Top Odds Guaranteed, First deposit bonus 100% up to 100€",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Rabona/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Vave",
+            "image": "https://www.all4wins.com/img/vave-logo.webp",
+            "description": "Best Rewards System, Top Odds Guaranteed, Welcome bonus 100% up to 500 USDT",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Vave/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Wazamba",
+            "image": "https://www.all4wins.com/img/wazamba.webp",
+            "description": "Wide Sports Coverage, Fast withdrawals, First deposit 100% up to 100€",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Wazamba/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "DuelBits",
+            "image": "https://www.all4wins.com/img/duelbits-small-banner.webp",
+            "description": "Crypto Friendly, High Betting Limits, Welcome bonus up to $100 FB",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Katsubet",
+            "image": "https://www.all4wins.com/img/katsubet.logo.webp",
+            "description": "Detailed info not provided",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Katsubet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "CloudBet",
+            "image": "https://www.all4wins.com/img/CloudBet-logo.webp",
+            "description": "Live Sports Betting, High Betting Limits, Welcome Bonus 100% up to 5 BTC",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "TrustDice",
+            "image": "https://www.all4wins.com/img/TrustDice-Logo.webp",
+            "description": "Free Bets & Promotions, Wide Sports Coverage, Risk Free Bet up to 100$",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
           }
         ]
       }
     </script>
-    <!-- End JSON-LD for Casinos CollectionPage with Featured Products -->
+    <!-- End JSON-LD for Casinos CollectionPage with Featured Products and Updated Logos -->
   </head>
   <body>
     <div id="Casino-Background"></div>
