--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <!-- JSON-LD for Casinos CollectionPage with Featured Products and Updated Logos -->
+    <!-- JSON-LD for Esports CollectionPage with Featured Products -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -78,10 +78,10 @@
           },
           {
             "@type": "CollectionPage",
-            "@id": "https://www.all4wins.com/Casinos/#collection",
-            "url": "https://www.all4wins.com/Casinos/",
-            "name": "Casinos",
-            "description": "Explore detailed reviews and promotions from the best online casinos.",
+            "@id": "https://www.all4wins.com/Esports/#collection",
+            "url": "https://www.all4wins.com/Esports/",
+            "name": "Esports",
+            "description": "Discover top esports betting sites offering exclusive promotions and bonuses.",
             "mainEntity": {
               "@type": "ItemList",
               "itemListElement": [
@@ -94,8 +94,8 @@
                 {
                   "@type": "ListItem",
                   "position": 2,
-                  "url": "https://www.all4wins.com/Reviews-page/BetFury/",
-                  "name": "BetFury"
+                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
+                  "name": "Thunderpick"
                 },
                 {
                   "@type": "ListItem",
@@ -106,66 +106,24 @@
                 {
                   "@type": "ListItem",
                   "position": 4,
-                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
-                  "name": "Thunderpick"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 5,
                   "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
                   "name": "GG.Bet"
                 },
                 {
                   "@type": "ListItem",
-                  "position": 6,
-                  "url": "https://www.all4wins.com/Reviews-page/BC.Games/",
+                  "position": 5,
+                  "url": "https://www.all4wins.com/Reviews-page/BC.GAME/",
                   "name": "BC.GAME"
                 },
                 {
                   "@type": "ListItem",
-                  "position": 7,
-                  "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/",
-                  "name": "7Bit-Casino"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 8,
-                  "url": "https://www.all4wins.com/Reviews-page/Rabona/",
-                  "name": "Rabona"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 9,
-                  "url": "https://www.all4wins.com/Reviews-page/Vave/",
-                  "name": "Vave"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 10,
-                  "url": "https://www.all4wins.com/Reviews-page/Wazamba/",
-                  "name": "Wazamba"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 11,
-                  "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
-                  "name": "DuelBits"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 12,
-                  "url": "https://www.all4wins.com/Reviews-page/Katsubet/",
-                  "name": "Katsubet"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 13,
+                  "position": 6,
                   "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
                   "name": "CloudBet"
                 },
                 {
                   "@type": "ListItem",
-                  "position": 14,
+                  "position": 7,
                   "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
                   "name": "TrustDice"
                 }
@@ -191,35 +149,9 @@
           },
           {
             "@type": "Product",
-            "name": "BetFury",
-            "image": "https://www.all4wins.com/img/BetFury-logo.webp",
-            "description": "Crypto-Friendly, Comprehensive Stats, Cashback & rakeback up to 50%",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/BetFury/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "Wild.io",
-            "image": "https://www.all4wins.com/img/wild-logo.webp",
-            "description": "Best Rewards System, High Betting Limits, First deposit 100% bonus up to $200 in free bets",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
             "name": "Thunderpick",
             "image": "https://www.all4wins.com/img/thunder-prick-logo.webp",
-            "description": "Top Odds Guaranteed, Wide Sports Coverage, 100% up to 600€",
+            "description": "Exclusive Esports Bonuses, Esports Tournaments, 100% up to 600€",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
@@ -230,9 +162,22 @@
           },
           {
             "@type": "Product",
+            "name": "Wild.io",
+            "image": "https://www.all4wins.com/img/wild-logo.webp",
+            "description": "Exclusive Esports Bonuses, Top Esports Titles, First deposit 100% bonus up to $200 in free bets",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
             "name": "GG.Bet",
             "image": "https://www.all4wins.com/img/GG.bet-logo.webp",
-            "description": "Wide Sports Coverage, High Betting Limits, Welcome Bonus up to 1000€ +250€ Freebets",
+            "description": "Exclusive Esports Bonuses, Esports Tournaments, Welcome Bonus up to 1000€ +250€ Freebets",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
@@ -245,88 +190,10 @@
             "@type": "Product",
             "name": "BC.GAME",
             "image": "https://www.all4wins.com/img/BC-Game.webp",
-            "description": "Top Odds Guaranteed, Seasonal Promotions, Welcome bonuses up to 100% + 20 FB",
+            "description": "Fast Bet Settlements, Crypto-Friendly, Welcome bonuses up to 100% + 20 FB",
             "offers": {
               "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/BC.Games/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "7Bit-Casino",
-            "image": "https://www.all4wins.com/img/7bit-logo.webp",
-            "description": "Detailed info not provided",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "Rabona",
-            "image": "https://www.all4wins.com/img/rabonaLogo.webp",
-            "description": "Personalized Promotions, Top Odds Guaranteed, First deposit bonus 100% up to 100€",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/Rabona/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "Vave",
-            "image": "https://www.all4wins.com/img/vave-logo.webp",
-            "description": "Best Rewards System, Top Odds Guaranteed, Welcome bonus 100% up to 500 USDT",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/Vave/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "Wazamba",
-            "image": "https://www.all4wins.com/img/wazamba.webp",
-            "description": "Wide Sports Coverage, Fast withdrawals, First deposit 100% up to 100€",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/Wazamba/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "DuelBits",
-            "image": "https://www.all4wins.com/img/duelbits-small-banner.webp",
-            "description": "Crypto Friendly, High Betting Limits, Welcome bonus up to $100 FB",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
-              "priceCurrency": "USD",
-              "price": "0",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "name": "Katsubet",
-            "image": "https://www.all4wins.com/img/katsubet.logo.webp",
-            "description": "Detailed info not provided",
-            "offers": {
-              "@type": "Offer",
-              "url": "https://www.all4wins.com/Reviews-page/Katsubet/",
+              "url": "https://www.all4wins.com/Reviews-page/BC.GAME/",
               "priceCurrency": "USD",
               "price": "0",
               "availability": "https://schema.org/InStock"
@@ -336,7 +203,7 @@
             "@type": "Product",
             "name": "CloudBet",
             "image": "https://www.all4wins.com/img/CloudBet-logo.webp",
-            "description": "Live Sports Betting, High Betting Limits, Welcome Bonus 100% up to 5 BTC",
+            "description": "Top Esports Titles, Fast Bet Settlements, Welcome Bonus 100% up to 5 BTC",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
@@ -349,7 +216,7 @@
             "@type": "Product",
             "name": "TrustDice",
             "image": "https://www.all4wins.com/img/TrustDice-Logo.webp",
-            "description": "Free Bets & Promotions, Wide Sports Coverage, Risk Free Bet up to 100$",
+            "description": "Best Bitcoin Platform, Fast Bet Settlements, 100% Risk free bet",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
@@ -361,7 +228,7 @@
         ]
       }
     </script>
-    <!-- End JSON-LD for Casinos CollectionPage with Featured Products and Updated Logos -->
+    <!-- End JSON-LD for Esports CollectionPage -->
   </head>
   <body>
     <div id="Casino-Background"></div>
