--- a/Esports/index.html
+++ b/Esports/index.html
@@ -55,6 +55,7 @@
       }
     </script>
 
+    <!-- JSON-LD for Esports CollectionPage with Featured Products -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -87,37 +88,44 @@
                 {
                   "@type": "ListItem",
                   "position": 1,
-                  "url": "https://www.all4wins.com/Reviews-page/Roobet/"
+                  "url": "https://www.all4wins.com/Reviews-page/Roobet/",
+                  "name": "Roobet"
                 },
                 {
                   "@type": "ListItem",
                   "position": 2,
-                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/"
+                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
+                  "name": "Thunderpick"
                 },
                 {
                   "@type": "ListItem",
                   "position": 3,
-                  "url": "https://www.all4wins.com/Reviews-page/Wild.io/"
+                  "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
+                  "name": "Wild.io"
                 },
                 {
                   "@type": "ListItem",
                   "position": 4,
-                  "url": "https://www.all4wins.com/Reviews-page/GG.Bet/"
+                  "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
+                  "name": "GG.Bet"
                 },
                 {
                   "@type": "ListItem",
                   "position": 5,
-                  "url": "https://www.all4wins.com/Reviews-page/BC.GAME/"
+                  "url": "https://www.all4wins.com/Reviews-page/BC.GAME/",
+                  "name": "BC.GAME"
                 },
                 {
                   "@type": "ListItem",
                   "position": 6,
-                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/"
+                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
+                  "name": "CloudBet"
                 },
                 {
                   "@type": "ListItem",
                   "position": 7,
-                  "url": "https://www.all4wins.com/Reviews-page/TrustDice/"
+                  "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
+                  "name": "TrustDice"
                 }
               ]
             },
@@ -125,10 +133,102 @@
               "@type": "Organization",
               "@id": "https://www.all4wins.com/#organization"
             }
+          },
+          {
+            "@type": "Product",
+            "name": "Roobet",
+            "image": "https://www.all4wins.com/img/Roobet.webp",
+            "description": "Best Rewards System, UFC Brand Ambassadors, Parlay Power Play – $40K in Prizes",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Roobet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Thunderpick",
+            "image": "https://www.all4wins.com/img/thunder-prick-logo.webp",
+            "description": "Exclusive Esports Bonuses, Esports Tournaments, 100% up to 600€",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Wild.io",
+            "image": "https://www.all4wins.com/img/wild-logo.webp",
+            "description": "Exclusive Esports Bonuses, Top Esports Titles, First deposit 100% bonus up to $200 in free bets",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "GG.Bet",
+            "image": "https://www.all4wins.com/img/GG.bet-logo.webp",
+            "description": "Exclusive Esports Bonuses, Esports Tournaments, Welcome Bonus up to 1000€ +250€ Freebets",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "BC.GAME",
+            "image": "https://www.all4wins.com/img/BC-Game.webp",
+            "description": "Fast Bet Settlements, Crypto-Friendly, Welcome bonuses up to 100% + 20 FB",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/BC.GAME/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "CloudBet",
+            "image": "https://www.all4wins.com/img/CloudBet-logo.webp",
+            "description": "Top Esports Titles, Fast Bet Settlements, Welcome Bonus 100% up to 5 BTC",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "TrustDice",
+            "image": "https://www.all4wins.com/img/TrustDice-Logo.webp",
+            "description": "Best Bitcoin Platform, Fast Bet Settlements, 100% Risk free bet",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
           }
         ]
       }
     </script>
+    <!-- End JSON-LD for Esports CollectionPage -->
   </head>
 
   <body>
