--- a/News-Articles/5-Major-leagues-Promotion-BC.Games/index.html
+++ b/News-Articles/5-Major-leagues-Promotion-BC.Games/index.html
@@ -63,43 +63,49 @@
       }
     </script>
 
-    <!-- JSON-LD Promotion for BC.GAME 5 Major Leagues Free Bets -->
-
+    <!-- JSON-LD Offer for BC.GAME 5 Major Leagues Free Bets -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Promotion",
+        "@type": "WebPage",
         "name": "BC.GAME 5 Major Leagues Free Bets",
-        "description": "Earn weekly free bets by depositing and staking on matches from Europe's top five football leagues: Premier League, La Liga, Bundesliga, Serie A, and Ligue 1.",
         "url": "https://www.all4wins.com/News-Articles/5-Major-leagues-Promotion-BC.Games/",
-        "image": "https://www.all4wins.com/img/news-banners/BCGAMES-Banner.gif",
-        "startDate": "2024-08-12",
-        "endDate": "2025-02-02",
-        "offers": {
-          "@type": "Offer",
-          "url": "https://www.all4wins.com/News-Articles/5-Major-leagues-Promotion-BC.Games/",
-          "availability": "https://schema.org/SoldOut",
-          "price": "0",
-          "priceCurrency": "USD",
-          "eligibleRegion": "Worldwide",
-          "validFrom": "2024-08-12",
-          "validThrough": "2025-02-02"
-        },
-        "publisher": {
-          "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization",
-          "name": "All4Wins",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
-            "width": 200,
-            "height": 200
+        "mainEntity": [
+          {
+            "@type": "Offer",
+            "name": "BC.GAME 5 Major Leagues Free Bets",
+            "description": "Earn weekly free bets by depositing and staking on matches from Europe's top five football leagues: Premier League, La Liga, Bundesliga, Serie A, and Ligue 1.",
+            "url": "https://www.all4wins.com/News-Articles/5-Major-leagues-Promotion-BC.Games/",
+            "image": "https://www.all4wins.com/img/news-banners/BCGAMES-Banner.gif",
+            "price": "0.00",
+            "priceCurrency": "USD",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-08-12",
+            "validThrough": "2025-02-02",
+            "eligibleRegion": {
+              "@type": "Country",
+              "name": "Worldwide"
+            },
+            "publisher": {
+              "@type": "Organization",
+              "@id": "https://www.all4wins.com/#organization",
+              "name": "All4Wins",
+              "logo": {
+                "@type": "ImageObject",
+                "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+                "width": 200,
+                "height": 200
+              }
+            },
+            "author": {
+              "@type": "Person",
+              "name": "Andrei"
+            }
           }
-        },
-        "author": { "@type": "Person", "name": "Andrei" }
+        ]
       }
     </script>
-    <!-- End JSON-LD Promotion for BC.GAME 5 Major Leagues -->
+    <!-- End JSON-LD Offer for BC.GAME 5 Major Leagues -->
   </head>
   <body>
     <div id="news-background"></div>
