--- a/News-Articles/BetFury-100-Free-Spins-No-Deposit/index.html
+++ b/News-Articles/BetFury-100-Free-Spins-No-Deposit/index.html
@@ -60,48 +60,45 @@
       }
     </script>
 
-    <!-- JSON-LD Offer for BetFury 100 Free Spins No Deposit (Ongoing) -->
+    <!-- JSON-LD Product + Offer for BetFury 100 Free Spins No Deposit -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "WebPage",
+        "@type": "Product",
         "name": "BetFury 100 Free Spins No Deposit",
+        "description": "New players can claim 100 free spins upon registration with no deposit required. Activate within 24 hours and use on a selected slot game. Winnings subject to 40x wagering requirement.",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-bananza.webp",
         "url": "https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/",
-        "mainEntity": [
-          {
-            "@type": "Offer",
-            "name": "BetFury 100 Free Spins No Deposit",
-            "description": "New players can claim 100 free spins upon registration with no deposit required. Activate within 24 hours and use on a selected slot game. Winnings subject to 40x wagering requirement.",
-            "url": "https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/",
-            "image": "https://www.all4wins.com/img/news-banners/betfury-bananza.webp",
-            "price": "0.00",
-            "priceCurrency": "USD",
-            "availability": "https://schema.org/InStock",
-            "validFrom": "2024-08-01",
-            "eligibleRegion": {
-              "@type": "Country",
-              "name": "Worldwide"
-            },
-            "publisher": {
-              "@type": "Organization",
-              "@id": "https://www.all4wins.com/#organization",
-              "name": "All4Wins",
-              "logo": {
-                "@type": "ImageObject",
-                "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
-                "width": 200,
-                "height": 200
-              }
-            },
-            "author": {
-              "@type": "Person",
-              "name": "Andrei"
-            }
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/",
+          "price": "0.00",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "2024-08-01",
+          "eligibleRegion": {
+            "@type": "Country",
+            "name": "Worldwide"
           }
-        ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
       }
     </script>
-    <!-- End JSON-LD Offer for BetFury 100 Free Spins No Deposit (Ongoing) -->
+    <!-- End JSON-LD Product + Offer for BetFury 100 Free Spins No Deposit -->
   </head>
   <body>
     <div id="news-background"></div>
