--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <div class="news-content">
                       <h2>
                         BetFury 100 Free Spins No Deposit Sign Up Bonus! <br />
-                        <strong> Promotion onging</strong>
+                        <strong> Promotion ongoing</strong>
                       </h2>
 
                       <div class="news-button">
@@ -492,7 +492,7 @@
                         GG.Bet Bonus Chest Promotion – Weekly Rewards and
                         Exclusive Prizes <br />
 
-                        <strong> Offer onfoing </strong>
+                        <strong> Offer ongoing </strong>
                       </h2>
 
                       <div class="news-button">
