--- a/News-Articles/Roobet-Mission-Uncrossable/index.html
+++ b/News-Articles/Roobet-Mission-Uncrossable/index.html
@@ -61,15 +61,17 @@
       }
     </script>
 
-    <!-- JSON-LD for Mission Uncrossable Game -->
+    <!-- JSON-LD for Mission Uncrossable Game (Rich Snippet Eligible) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Game",
+        "@type": "VideoGame",
         "name": "Mission Uncrossable",
         "description": "Mission Uncrossable is an exclusive Roobet game inspired by Crossy Road. Guide your chicken across busy roads, collect multipliers, and aim for wins up to $1,000,000. Adjustable difficulty and bet sizes from $0.01 to $100 per round.",
         "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
         "image": "https://www.all4wins.com/img/news-banners/mission-unscrollable-topBanner.webp",
+        "gamePlatform": ["Browser", "Mobile"],
+        "genre": "Arcade",
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization",
