--- a/News-Articles/Roobet-Mission-Uncrossable/index.html
+++ b/News-Articles/Roobet-Mission-Uncrossable/index.html
@@ -61,23 +61,18 @@
       }
     </script>
 
-    <!-- JSON-LD Product + Offer for Mission Uncrossable -->
+    <!-- JSON-LD Article for Mission Uncrossable -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Product",
-        "name": "Mission Uncrossable",
+        "@type": "Article",
+        "headline": "Mission Uncrossable",
         "description": "Mission Uncrossable is an exclusive Roobet game inspired by Crossy Road. Guide your chicken across busy roads, collect multipliers, and aim for wins up to $1,000,000. Adjustable difficulty and bet sizes from $0.01 to $100 per round.",
         "image": "https://www.all4wins.com/img/news-banners/mission-unscrollable-topBanner.webp",
         "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
-        "category": "Arcade Game",
-        "offers": {
-          "@type": "Offer",
-          "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
-          "price": "0.00",
-          "priceCurrency": "USD",
-          "availability": "https://schema.org/InStock",
-          "validFrom": "2024-08-01"
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
@@ -90,13 +85,11 @@
             "height": 200
           }
         },
-        "author": {
-          "@type": "Person",
-          "name": "Andrei"
-        }
+        "datePublished": "2024-08-01",
+        "dateModified": "2024-08-01"
       }
     </script>
-    <!-- End JSON-LD Product + Offer for Mission Uncrossable -->
+    <!-- End JSON-LD Article for Mission Uncrossable -->
   </head>
   <body>
     <div id="news-background"></div>
