--- a/News-Articles/BC.Game_Esports_Masters_Challenge/index.html
+++ b/News-Articles/BC.Game_Esports_Masters_Challenge/index.html
@@ -67,7 +67,7 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Promotion",
+        "@type": "Product",
         "name": "BC.Game Esports Masters Challenge",
         "description": "Participate in the BC.Game Esports Masters Challenge by placing real-money bets on eligible esports matches to win a share of $1,000 in Free Bets.",
         "url": "https://www.all4wins.com/News-Articles/BC.Game_Esports_Masters_Challenge/",
@@ -98,7 +98,9 @@
         "author": {
           "@type": "Person",
           "name": "Andrei"
-        }
+        },
+        "datePublished": "2025-06-01",
+        "dateModified": "2025-06-17"
       }
     </script>
     <!-- End JSON-LD for ended BC.Game Esports Masters Challenge promotion -->
