--- a/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
+++ b/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
@@ -60,15 +60,19 @@
       }
     </script>
 
-    <!-- JSON-LD for Roobet Avia Masters game -->
+    <!-- JSON-LD Article for Roobet Avia Masters -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Game",
-        "name": "Avia Masters: The Ultimate Plane Game",
+        "@type": "Article",
+        "headline": "Avia Masters: The Ultimate Plane Game",
         "description": "Experience the thrill of Avia Masters, a crash-style plane game where players bet on how long the plane will fly before it crashes. Available on Roobet.",
-        "url": "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/",
         "image": "https://www.all4wins.com/img/news-banners/roobet-avia-banner.webp",
+        "url": "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/",
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization",
@@ -80,13 +84,22 @@
             "height": 200
           }
         },
-        "author": {
-          "@type": "Person",
-          "name": "Andrei"
+        "datePublished": "2024-08-15",
+        "dateModified": "2024-08-15",
+        "about": {
+          "@type": "Game",
+          "name": "Avia Masters",
+          "genre": "Crash Game",
+          "operatingSystem": "Web",
+          "applicationCategory": "Game",
+          "publisher": {
+            "@type": "Organization",
+            "name": "Roobet"
+          }
         }
       }
     </script>
-    <!-- End JSON-LD for Roobet Avia Masters game -->
+    <!-- End JSON-LD Article for Roobet Avia Masters -->
   </head>
   <body>
     <div id="news-background"></div>
