--- a/News-Articles/Roobet-$100000-Weekly-Raffles/index.html
+++ b/News-Articles/Roobet-$100000-Weekly-Raffles/index.html
@@ -70,11 +70,11 @@
       }
     </script>
 
-    <!-- JSON-LD for Roobet $100,000 Weekly Raffles -->
+    <!-- JSON-LD for ended Roobet $100,000 Weekly Raffles -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Promotion",
+        "@type": "Product",
         "name": "Roobet $100,000 Weekly Raffles",
         "description": "Participate in Roobet's weekly raffle for a chance to win a share of $100,000. Earn 1 ticket for every $250 wagered across all games on Roobet. Double your chances by playing the game of the week.",
         "url": "https://www.all4wins.com/News-Articles/Roobet-$100000-Weekly-Raffles/",
@@ -84,10 +84,10 @@
         "offers": {
           "@type": "Offer",
           "url": "https://www.all4wins.com/News-Articles/Roobet-$100000-Weekly-Raffles/",
+          "availability": "https://schema.org/SoldOut",
           "price": "0",
           "priceCurrency": "USD",
           "eligibleRegion": "Worldwide",
-          "availability": "https://schema.org/SoldOut",
           "validFrom": "2024-08-25",
           "validThrough": "2024-09-01"
         },
@@ -105,10 +105,12 @@
         "author": {
           "@type": "Person",
           "name": "Andrei"
-        }
+        },
+        "datePublished": "2024-08-24",
+        "dateModified": "2024-09-02"
       }
     </script>
-    <!-- End JSON-LD for Roobet $100,000 Weekly Raffles -->
+    <!-- End JSON-LD for ended Roobet $100,000 Weekly Raffles -->
   </head>
   <body>
     <div id="news-background"></div>
