--- a/index.html
+++ b/index.html
@@ -320,6 +320,35 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- roobet september 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/September_at_Roobet_Spin_Bet_Win_Repeat/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/september_at_roobet_2025_news.webp"
+                        width="300"
+                        height="200"
+                        alt="roobet september 2025"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        September at Roobet: Spin, Bet, Win, Repeat <br />
+
+                        <strong>
+                          Offer expires on 30th of September 2025</strong
+                        >
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- avia roobet-->
                 <div class="news-item">
                   <a
