--- a/ads/mission-uncrossable-review.html
+++ b/ads/mission-uncrossable-review.html
@@ -192,7 +192,7 @@
         topImgLink.rel = "noopener noreferrer";
 
         const topImg = document.createElement("img");
-        topImg.src = "/img/news-banners/mission-uncrossable.JPG";
+        topImg.src = "/img/news-banners/mission-uncrossable.jpg";
         topImg.alt = "Mission Uncrossable Banner";
         topImg.style.display = "block";
         topImg.style.margin = "0 auto 15px auto";
